
- Core:
  . Fixed bug #78810 (RW fetches do not throw "uninitialized property"
    exception). (Nikita)
  . Fixed bug #78868 (Calling __autoload() with incorrect EG(fake_scope) value).
    (Antony Dovgal, Dmitry)

- GD:
  . Fixed bug #78849 (GD build broken with -D SIGNED_COMPARE_SLOW). (cmb)

- FPM:
  . Fixed bug #76601 (Partially working php-fpm ater incomplete reload).
    (Maksim Nikulin)

- OPcache:
  . Fixed $x = (bool)$x; with opcache (should emit undeclared variable notice).
    (Tyson Andre)

- PCRE:
  . Fixed bug #78853 (preg_match() may return integer > 1). (cmb)

- Standard:
  . Fixed bug #77638 (var_export'ing certain class instances segfaults). (cmb)
  . Fixed bug #78840 (imploding $GLOBALS crashes). (cmb)

28 Nov 2019, PHP 7.4.0

- Core:
  . Implemented RFC: Deprecate curly brace syntax for accessing array elements
    and string offsets.
    https://wiki.php.net/rfc/deprecate_curly_braces_array_access (Andrey Gromov)
  . Implemented RFC: Deprecations for PHP 7.4.
    https://wiki.php.net/rfc/deprecations_php_7_4 (Kalle, Nikita)
  . Fixed bug #52752 (Crash when lexing). (Nikita)
  . Fixed bug #60677 (CGI doesn't properly validate shebang line contains #!).
    (Nikita)
  . Fixed bug #71030 (Self-assignment in list() may have inconsistent behavior).
    (Nikita)
  . Fixed bug #72530 (Use After Free in GC with Certain Destructors). (Nikita)
  . Fixed bug #75921 (Inconsistent: No warning in some cases when stdObj is
    created on the fly). (David Walker)
  . Implemented FR #76148 (Add array_key_exists() to the list of specially
    compiled functions). (Majkl578)
  . Fixed bug #76430 (__METHOD__ inconsistent outside of method).
    (Ryan McCullagh, Nikita)
  . Fixed bug #76451 (Aliases during inheritance type checks affected by
    opcache). (Nikita)
  . Implemented FR #77230 (Support custom CFLAGS and LDFLAGS from environment).
    (cmb)
  . Fixed bug #77345 (Stack Overflow caused by circular reference in garbage